# flatland-hmi

./: .gitignore  .prettierrc.json  README.md  package-lock.json  ui-demo.mov
backend/: .gitignore  README.md  main.py  requirements.txt  test.py
backend/app/: env.py  rest_client.http  routes.py  routes2.py
backend/app/policy/: deadlock_avoidance_policy.py  random_policy.py  shortest_distance_walker.py
backend/app/scenario/: hack4rail.py  random.py  static.py
frontend/: README.md  package-lock.json
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts  controller.service.ts  data.service.ts  renderer.service.ts  state.service.ts
frontend/src/app/map/: map.component.html  map.component.scss  map.component.ts
frontend/src/app/marey/: marey.component.html  marey.component.scss  marey.component.ts
llm_agent/: .gitignore  README.md  pyproject.toml  sample.env
llm_agent/api/: main.py
llm_agent/api/routers/: invoke.py  prompt.py
llm_agent/data/: sample_invoke_request.json
llm_agent/src/flatland_agent/: models.py  utils.py
llm_agent/src/flatland_agent/agents/: coordinator_agent.py  flatland_agent.py  incident_agent.py  language_agent.py
